--- a/config/database.yml
+++ b/config/database.yml
@@ -17,12 +17,15 @@ development:
 # Do not set this db to the same as development or production.
 test:
   adapter: postgresql
-  database: db/test.sqlite3
+  encoding: unicode
+  database: book_inventory
   pool: 5
-  timeout: 5000
-
+  username: myapp
+  password:
 production:
   adapter: postgresql
-  database: db/production.sqlite3
+  encoding: unicode
+  database: book_inventory
   pool: 5
-  timeout: 5000
+  username: bubun
+  password: bubun
